Few minor changes to checkstyle